--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@angular/platform-browser": "^17.0.0",
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
+    "@types/jquery": "^3.5.31",
+    "jquery": "^3.7.1",
     "rxjs": "~7.8.0",
     "three": "^0.160.1",
     "tslib": "^2.3.0",
